--- a/package.json
+++ b/package.json
@@ -1,47 +1,49 @@
 {
-    "name": "wip-wippo",
-    "version": "1.0.0",
-    "license": "MIT",
-    "contributors": [
-      "mixkungz <phachara.mix@mail.kmutt.ac.th>",
-      "DiViNiZe <patric_emmel@outlook.com>"
-    ],
-    "repository": "https://github.com/wipcamp/wip-wippo.git",
-    "scripts": {
-      "dev": "next",
-      "build": "next build",
-      "start": "next start"
-    },
-    "dependencies": {
-      "axios": "^0.17.1",
-      "dotenv": "^4.0.0",
-      "express": "^4.16.2",
-      "moment": "^2.19.3",
-      "next": "^4.2.1",
-      "next-redux-wrapper": "^1.3.5",
-      "next-routes": "^1.1.0",
-      "react": "^16.2.0",
-      "react-dom": "^16.2.0",
-      "react-redux": "^5.0.6",
-      "recompose": "^0.26.0",
-      "redux": "^3.7.2",
-      "redux-devtools-extension": "^2.13.2",
-      "redux-thunk": "^2.2.0",
-      "styled-components": "^2.4.0"
-    },
-    "devDependencies": {
-      "babel-eslint": "^7.2.3",
-      "babel-plugin-styled-components": "^1.1.7",
-      "babel-plugin-transform-decorators-legacy": "^1.3.4",
-      "babel-preset-stage-0": "^6.24.1",
-      "eslint": "^4.9.0",
-      "eslint-config-standard": "^10.2.1",
-      "eslint-config-standard-react": "^5.0.0",
-      "eslint-plugin-import": "^2.8.0",
-      "eslint-plugin-node": "^5.2.1",
-      "eslint-plugin-promise": "^3.6.0",
-      "eslint-plugin-react": "^7.4.0",
-      "eslint-plugin-standard": "^3.0.1",
-      "stats-webpack-plugin": "^0.6.1"
-    }
+  "name": "wip-wippo",
+  "version": "1.0.0",
+  "license": "MIT",
+  "contributors": [
+    "mixkungz <phachara.mix@mail.kmutt.ac.th>",
+    "DiViNiZe <patric_emmel@outlook.com>"
+  ],
+  "repository": "https://github.com/wipcamp/wip-wippo.git",
+  "scripts": {
+    "dev": "next",
+    "build": "next build",
+    "start": "next start"
+  },
+  "dependencies": {
+    "@fortawesome/fontawesome": "^1.1.1",
+    "@fortawesome/react-fontawesome": "^0.0.17",
+    "axios": "^0.17.1",
+    "dotenv": "^4.0.0",
+    "express": "^4.16.2",
+    "moment": "^2.19.3",
+    "next": "^4.2.1",
+    "next-redux-wrapper": "^1.3.5",
+    "next-routes": "^1.1.0",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-redux": "^5.0.6",
+    "recompose": "^0.26.0",
+    "redux": "^3.7.2",
+    "redux-devtools-extension": "^2.13.2",
+    "redux-thunk": "^2.2.0",
+    "styled-components": "^2.4.0"
+  },
+  "devDependencies": {
+    "babel-eslint": "^7.2.3",
+    "babel-plugin-styled-components": "^1.1.7",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-preset-stage-0": "^6.24.1",
+    "eslint": "^4.9.0",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-config-standard-react": "^5.0.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-node": "^5.2.1",
+    "eslint-plugin-promise": "^3.6.0",
+    "eslint-plugin-react": "^7.4.0",
+    "eslint-plugin-standard": "^3.0.1",
+    "stats-webpack-plugin": "^0.6.1"
   }
+}
