--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@fortawesome/fontawesome": "^1.1.1",
     "@fortawesome/react-fontawesome": "^0.0.17",
     "axios": "^0.17.1",
+    "cake-chart": "^0.2.3",
+    "chart.js": "^1.1.1",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "moment": "^2.19.3",
@@ -23,8 +25,10 @@
     "next-redux-wrapper": "^1.3.5",
     "next-routes": "^1.1.0",
     "react": "^16.2.0",
+    "react-chartjs": "^1.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
+    "react-transition-group": "1.x",
     "recompose": "^0.26.0",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
