--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-chartjs": "^1.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
+    "react-table": "^6.7.6",
     "react-transition-group": "1.x",
     "recompose": "^0.26.0",
     "redux": "^3.7.2",
