--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
     "redux-thunk": "^2.2.0",
+    "semantic-ui-css": "^2.2.12",
+    "semantic-ui-react": "^0.77.2",
     "styled-components": "^2.4.0"
   },
   "devDependencies": {
