--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "redux-thunk": "^2.2.0",
     "semantic-ui-css": "^2.2.12",
     "semantic-ui-react": "^0.77.2",
-    "styled-components": "^2.4.0"
+    "styled-components": "^2.4.0",
+    "victory": "^0.24.5"
   },
   "devDependencies": {
     "babel-eslint": "^7.2.3",
