--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next": "^4.2.1",
     "next-redux-wrapper": "^1.3.5",
     "next-routes": "^1.1.0",
+    "ramda": "^0.25.0",
     "react": "^16.2.0",
     "react-chartjs": "^1.2.0",
     "react-dom": "^16.2.0",
