--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "^16.2.0",
     "react-chartjs": "^1.2.0",
     "react-dom": "^16.2.0",
+    "react-medium-image-zoom": "^3.0.10",
     "react-redux": "^5.0.6",
     "react-table": "^6.7.6",
     "react-transition-group": "1.x",
