--- a/package.json
+++ b/package.json
@@ -24,11 +24,12 @@
     "next": "^4.2.1",
     "next-redux-wrapper": "^1.3.5",
     "next-routes": "^1.1.0",
+    "query-string": "^5.1.0",
     "ramda": "^0.25.0",
     "react": "^16.2.0",
     "react-chartjs": "^1.2.0",
     "react-dom": "^16.2.0",
-    "react-medium-image-zoom": "^3.0.10",
+    "react-image-magnify": "^2.4.1",
     "react-redux": "^5.0.6",
     "react-table": "^6.7.6",
     "react-transition-group": "1.x",
