--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "^16.2.0",
     "react-chartjs": "^1.2.0",
     "react-dom": "^16.2.0",
+    "react-facebook-login": "^4.0.0",
     "react-redux": "^5.0.6",
     "react-table": "^6.7.6",
     "react-transition-group": "1.x",
