--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
     "axios": "^0.17.1",
     "cake-chart": "^0.2.3",
     "chart.js": "^1.1.1",
+    "cookie": "^0.3.1",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "moment": "^2.20.1",
     "next": "^4.2.1",
     "next-redux-wrapper": "^1.3.5",
-    "next-routes": "^1.1.0",
+    "next-routes": "^1.3.0",
     "react": "^16.2.0",
     "react-chartjs": "^1.2.0",
     "react-dom": "^16.2.0",
