--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "semantic-ui-css": "^2.2.12",
     "semantic-ui-react": "^0.77.2",
     "styled-components": "^2.4.0",
+    "sweetalert-react": "^0.4.11",
     "victory": "^0.24.5"
   },
   "devDependencies": {
