--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cookie": "^0.3.1",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
+    "htmlescape": "^1.1.1",
     "moment": "^2.20.1",
     "next": "^4.2.1",
     "next-redux-wrapper": "^1.3.5",
