[UPDATE] Add Contributor

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "license": "MIT",
   "contributors": [
     "mixkungz <phachara.mix@mail.kmutt.ac.th>",
-    "DiViNiZe <patric_emmel@outlook.com>"
+    "DiViNiZe <patric_emmel@outlook.com>",
+    "imgrbs <keerati.jear@gmail.com>"
   ],
   "repository": "https://github.com/wipcamp/wip-wippo.git",
   "scripts": {
