--- a/package.json
+++ b/package.json
@@ -14,17 +14,17 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "@fortawesome/fontawesome": "^1.1.1",
+    "@fortawesome/fontawesome": "^1.1.4",
     "@fortawesome/react-fontawesome": "^0.0.17",
-    "axios": "^0.17.1",
+    "axios": "^0.18.0",
     "cake-chart": "^0.2.3",
-    "chart.js": "^1.1.1",
+    "chart.js": "^2.7.2",
     "cookie": "^0.3.1",
-    "dotenv": "^4.0.0",
-    "express": "^4.16.2",
+    "dotenv": "^5.0.1",
+    "express": "^4.16.3",
     "htmlescape": "^1.1.1",
-    "moment": "^2.20.1",
-    "next": "^4.2.1",
+    "moment": "^2.21.0",
+    "next": "^5.0.0",
     "next-redux-wrapper": "^1.3.5",
     "next-routes": "^1.3.0",
     "query-string": "^5.1.0",
@@ -32,34 +32,34 @@
     "react": "^16.2.0",
     "react-chartjs": "^1.2.0",
     "react-dom": "^16.2.0",
-    "react-facebook-login": "^4.0.0",
-    "react-image-magnify": "^2.4.1",
-    "react-redux": "^5.0.6",
-    "react-table": "^6.7.6",
-    "react-transition-group": "1.x",
+    "react-facebook-login": "^4.0.1",
+    "react-image-magnify": "^2.5.2",
+    "react-redux": "^5.0.7",
+    "react-table": "^6.8.0",
+    "react-transition-group": "2.2.1",
     "recompose": "^0.26.0",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
     "redux-thunk": "^2.2.0",
-    "semantic-ui-css": "^2.2.12",
-    "semantic-ui-react": "^0.77.2",
-    "styled-components": "^2.4.0",
+    "semantic-ui-css": "^2.3.0",
+    "semantic-ui-react": "^0.78.3",
+    "styled-components": "^3.2.1",
     "sweetalert-react": "^0.4.11",
-    "victory": "^0.24.5"
+    "victory": "^0.25.6"
   },
   "devDependencies": {
-    "babel-eslint": "^7.2.3",
-    "babel-plugin-styled-components": "^1.1.7",
+    "babel-eslint": "^8.2.2",
+    "babel-plugin-styled-components": "^1.5.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-stage-0": "^6.24.1",
-    "eslint": "^4.9.0",
-    "eslint-config-standard": "^10.2.1",
-    "eslint-config-standard-react": "^5.0.0",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-node": "^5.2.1",
-    "eslint-plugin-promise": "^3.6.0",
-    "eslint-plugin-react": "^7.4.0",
+    "eslint": "^4.18.2",
+    "eslint-config-standard": "^11.0.0",
+    "eslint-config-standard-react": "^6.0.0",
+    "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-node": "^6.0.1",
+    "eslint-plugin-promise": "^3.7.0",
+    "eslint-plugin-react": "^7.7.0",
     "eslint-plugin-standard": "^3.0.1",
-    "stats-webpack-plugin": "^0.6.1"
+    "stats-webpack-plugin": "^0.6.2"
   }
 }
