--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-dom": "^16.2.0",
     "react-facebook-login": "^4.0.1",
     "react-image-magnify": "^2.5.2",
+    "react-live-clock": "^2.0.3",
     "react-redux": "^5.0.7",
     "react-table": "^6.8.0",
     "react-transition-group": "2.2.1",
