--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "^16.2.0",
     "react-chartjs": "^1.2.0",
     "react-chartjs-2": "^2.7.0",
+    "react-countdown-now": "^1.3.0",
     "react-dom": "^16.2.0",
     "react-facebook-login": "^4.0.1",
     "react-image-magnify": "^2.5.2",
