--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-transition-group": "2.2.1",
     "recompose": "^0.26.0",
     "redux": "^3.7.2",
+    "redux-define": "^1.1.1",
     "redux-devtools-extension": "^2.13.2",
     "redux-thunk": "^2.2.0",
     "semantic-ui-css": "^2.3.0",
