--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "redux": "^3.7.2",
     "redux-define": "^1.1.1",
     "redux-devtools-extension": "^2.13.2",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
     "semantic-ui-css": "^2.3.0",
     "semantic-ui-react": "^0.78.3",
