[ADD] Dependency react-sticky

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-live-clock": "^2.0.3",
     "react-redux": "^5.0.7",
     "react-spinners": "^0.2.6",
+    "react-sticky": "^6.0.2",
     "react-table": "^6.8.0",
     "react-transition-group": "2.2.1",
     "recompose": "^0.26.0",
