--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "redux": "^3.7.2",
     "redux-define": "^1.1.1",
     "redux-devtools-extension": "^2.13.2",
+    "redux-form": "^7.3.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
     "semantic-ui-css": "^2.3.0",
