--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-chartjs": "^1.2.0",
     "react-chartjs-2": "^2.7.0",
     "react-countdown-now": "^1.3.0",
+    "react-datetime": "^2.14.0",
     "react-dom": "^16.2.0",
     "react-dropzone": "^4.2.9",
     "react-facebook-login": "^4.0.1",
@@ -47,6 +48,7 @@
     "redux": "^3.7.2",
     "redux-define": "^1.1.1",
     "redux-devtools-extension": "^2.13.2",
+    "redux-form": "^7.3.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
     "semantic-ui-css": "^2.3.0",
