--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/fontawesome": "^1.1.4",
     "@fortawesome/react-fontawesome": "^0.0.17",
     "axios": "^0.18.0",
+    "body-parser": "^1.18.2",
     "cake-chart": "^0.2.3",
     "chart.js": "^2.7.2",
     "cookie": "^0.3.1",
@@ -51,6 +52,7 @@
     "semantic-ui-react": "^0.78.3",
     "styled-components": "^3.2.1",
     "sweetalert-react": "^0.4.11",
+    "thaismartcardreader.js": "https://github.com/sgnsys3/thaismartcardreader.js",
     "victory": "^0.25.6"
   },
   "devDependencies": {
