--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "query-string": "^5.1.0",
     "ramda": "^0.25.0",
     "react": "^16.2.0",
+    "react-big-calendar": "^0.19.1",
     "react-chartjs": "^1.2.0",
     "react-chartjs-2": "^2.7.0",
     "react-countdown-now": "^1.3.0",
