--- a/.babelrc
+++ b/.babelrc
@@ -4,10 +4,22 @@
     "stage-0"
   ],
   "plugins": [
-    "transform-decorators-legacy",
-    [
-      "styled-components",
-      { "ssr": true, "displayName": true, "preprocess": false }
-    ]
-  ]
+    ["styled-components", {
+      "ssr": true
+    }]
+  ],
+  "env": {
+    "development": {
+      "presets": "next/babel"
+    },
+    "production": {
+      "presets": "next/babel"
+    },
+    "test": {
+      "presets": [
+        ["env", { "modules": "commonjs" }],
+        "next/babel"
+      ]
+    }
+  }
 }
