--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-chartjs": "^1.2.0",
     "react-chartjs-2": "^2.7.0",
     "react-countdown-now": "^1.3.0",
+    "react-datepicker": "^1.4.1",
     "react-datetime": "^2.14.0",
     "react-dom": "^16.2.0",
     "react-dropzone": "^4.2.9",
